Enable Java 21 preview features